--- a/package.json
+++ b/package.json
@@ -1,9 +1,14 @@
 {
     "name": "compare-product",
     "dependencies": {
-        "and": "^0.0.3",
+        "bootstrap": "^4.4.1",
+        "css-loader": "^3.4.2",
+        "file-loader": "^5.1.0",
         "react": "^16.13.0",
-        "react-dom": "^16.13.0"
+        "react-bootstrap": "^1.0.0-beta.17",
+        "react-dom": "^16.13.0",
+        "reactstrap": "^8.4.1",
+        "style-loader": "^1.1.3"
     },
     "scripts": {
         "serve": "webpack-dev-server --mode development",
@@ -15,6 +20,8 @@
         "@babel/preset-react": "^7.8.3",
         "babel-loader": "^8.0.6",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.13.1",
+        "sass-loader": "^8.0.2",
         "webpack": "^4.41.6",
         "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
