--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
+    "homepage": "http://aakanksha-wal.github.io/compare-product",
     "name": "compare-product",
     "dependencies": {
         "bootstrap": "^4.4.1",
         "css-loader": "^3.4.2",
         "file-loader": "^5.1.0",
+        "gh-pages": "^2.2.0",
         "react": "^16.13.0",
         "react-bootstrap": "^1.0.0-beta.17",
         "react-dom": "^16.13.0",
@@ -12,7 +14,9 @@
     },
     "scripts": {
         "serve": "webpack-dev-server --mode development",
-        "build": "webpack --mode production"
+        "build": "webpack --mode production",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
         "@babel/core": "^7.8.6",
